{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 96,
  "lineage": "f5dae492-345e-7bf8-60c7-927a28ced649",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:internet-gateway/igw-06433be4560084617",
            "id": "igw-06433be4560084617",
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:loadbalancer/app/go-pf/62f09849b7a71489",
            "arn_suffix": "app/go-pf/62f09849b7a71489",
            "dns_name": "go-pf-390077787.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:loadbalancer/app/go-pf/62f09849b7a71489",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "go-pf",
            "security_groups": [
              "sg-0080b0c95af09b88f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fb13c19017338bc"
              },
              {
                "subnet_id": "subnet-0ae7c9c9d49df055b"
              },
              {
                "subnet_id": "subnet-0c1684478e8cb091c"
              }
            ],
            "subnets": [
              "subnet-00fb13c19017338bc",
              "subnet-0ae7c9c9d49df055b",
              "subnet-0c1684478e8cb091c"
            ],
            "vpc_id": "vpc-09cdb79bfcb832321",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_subnet.public_1d",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:listener/app/go-pf/62f09849b7a71489/a7fcfa84a3553af0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "ok",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:listener/app/go-pf/62f09849b7a71489/a7fcfa84a3553af0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:loadbalancer/app/go-pf/62f09849b7a71489",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_subnet.public_1d",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:targetgroup/go-pf/4964d312cf3c1423",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:listener-rule/app/go-pf/62f09849b7a71489/a7fcfa84a3553af0/af96da417b622ff4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:listener-rule/app/go-pf/62f09849b7a71489/a7fcfa84a3553af0/af96da417b622ff4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:listener/app/go-pf/62f09849b7a71489/a7fcfa84a3553af0",
            "priority": 1
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_subnet.public_1d",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:targetgroup/go-pf/4964d312cf3c1423",
            "arn_suffix": "targetgroup/go-pf/4964d312cf3c1423",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:002146139975:targetgroup/go-pf/4964d312cf3c1423",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "go-pf",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:security-group/sg-0080b0c95af09b88f",
            "description": "go-pf alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0080b0c95af09b88f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "go-pf-alb",
            "name_prefix": "",
            "owner_id": "002146139975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-pf-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:security-group/sg-0dbb1854540ea4542",
            "description": "go-pf ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbb1854540ea4542",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "go-pf-ecs",
            "name_prefix": "",
            "owner_id": "002146139975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "go-pf-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-01318b217af73f4ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-01318b217af73f4ae",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-private-1a"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-077dc146e59c08665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-077dc146e59c08665",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-private-1c"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1d",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-0b0f02a3f8c9925dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0b0f02a3f8c9925dd",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-private-1d"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-0ae7c9c9d49df055b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ae7c9c9d49df055b",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-public-1a"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-00fb13c19017338bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00fb13c19017338bc",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-public-1c"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1d",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:subnet/subnet-0c1684478e8cb091c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c1684478e8cb091c",
            "map_public_ip_on_launch": false,
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf-public-1d"
            },
            "vpc_id": "vpc-09cdb79bfcb832321"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:002146139975:vpc/vpc-09cdb79bfcb832321",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb4a90629d10560d",
            "default_route_table_id": "rtb-0d65bfe205a1eae06",
            "default_security_group_id": "sg-0ab9a5a88e19f4286",
            "dhcp_options_id": "dopt-a2a5a1c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09cdb79bfcb832321",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d65bfe205a1eae06",
            "owner_id": "002146139975",
            "tags": {
              "Name": "go-pf"
            }
          }
        }
      ]
    }
  ]
}